# Python-Idiomatic

./: .gitignore  R1.md  README-reportlab-docs-cli.md  Report Text Doc.md  TA1.md  change-marked-generate.py  create_task_visual_options.py  generate_report.py  generate_report_word_doc.py  mckinseyvis.md  pyproject.toml  report-analysis.md  report_design_system.py  sample_population_table_methodology.md  skills-lock.json
.agents/skills/mckinsey-style-visualization/: .gitignore  CONTRIBUTING.md  EXAMPLES.md  INSTALLATION.md  LICENSE  QUICKSTART.md  README.md
.agents/skills/reportlab-docs-cli/: SKILL.md
.agents/skills/reportlab-docs-cli/agents/: openai.yaml
.superpowers/brainstorm/17100-1777893666/content/: task-range-options.html
.superpowers/brainstorm/17100-1777893666/state/: events  server-info
.superpowers/brainstorm/4514-1778186643/content/: copilot-licence-non-duplication.html  copilot-licence-table-options.html
docs/: report_visual_style_guide.md
docs/Formatting Guidelines/: report_visual_style_guide.md
docs/Report Analysis /: section 3 table.md  section-1-table.md  section-2-table.md
docs/superpowers/plans/: 2026-05-08-report-design-system-standardisation.md  2026-05-08-report-figure-corrections.md  2026-05-08-report-visual-design-system-next-pass.md  2026-05-09-report-design-system-completion.md
docs/superpowers/specs/: 2026-05-04-task-range-visual-design.md  2026-05-08-copilot-licence-context-design.md  2026-05-08-report-visual-design-system-next-pass-design.md
reportlab-docs-cli/: .gitignore  LICENSE  README.md  pyproject.toml
reportlab-docs-cli/.github/workflows/: ci.yml
reportlab-docs-cli/reportlab_docs_cli/: __init__.py  cli.py
reportlab-docs-cli/tests/: test_reportlab_docs_cli.py
tests/: test_report_design_system.py
